# flutter_rust_bridge_template

./: .gitignore  dispatch.sh  justfile  pubspec.yaml
ios/Runner/: bridge_generated_1.h
lib/: bridge_generated_0.dart  bridge_generated_0.io.dart  bridge_generated_0.web.dart  bridge_generated_1.dart  bridge_generated_1.freezed.dart  bridge_generated_1.io.dart  bridge_generated_1.web.dart  ffi.dart  ffi_web.dart
macos/Runner/: bridge_generated_0.h
native/: Cargo.toml  build.rs
native/src/: bridge_generated_0.rs  bridge_generated_1.io.rs  bridge_generated_1.rs  bridge_generated_1.web.rs  lib.rs  surreal copy.rs  surreal.rs
