[package]
edition = "2021"
name = "native"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1"
flutter_rust_bridge = "1"
tokio = {version = "^1.21.2", default-features = false, features = ["macros", "rt", "sync"]}

surrealdb-rs = {git = "https://github.com/rushmorem/surrealdb.rs", branch = "embedded-db", default-features = false}
time = {version = "^0.3.17", features = ["serde"]}
tracing-subscriber = "^0.3.16"
ulid = {version = "^1.0.0", features = ["serde"]}

[features]
default = ["test"]
http = ["surrealdb-rs/http"]
local = ["surrealdb-rs/rocksdb"]
test = ["surrealdb-rs/mem"]
ws = ["surrealdb-rs/ws"]
